# ReopenJudge

./: .gitignore  README.md  run.sh
app/algorithm-visualization/: .gitignore  CMakeLists.txt  wasm-compile.sh
app/algorithm-visualization/bubble-sort/: .gitignore  CMakeLists.txt  main.cpp
app/algorithm-visualization/qt-opengl/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
core/: crawler.py  db.sqlite3  manage.py
core/oiproblems/: apps.py  models.py  serializer.py  urls.py  views.py
core/oiproblems/migrations/: 0001_initial.py  0002_announcement_group_user_match_problem_match_and_more.py  0003_group_group_type_group_url.py  0004_group_admin_alter_user_id.py  0005_announcement_publisher_group_logo.py  0006_rename_logo_group_large_logo_group_small_logo.py  0007_alter_group_group_type.py  0008_remove_group_large_logo_remove_group_small_logo_and_more.py
core/reopenjudge/: asgi.py  settings.py  urls.py  wsgi.py
website/: package-lock.json  package.json  vite.config.js
website/public/: .gitignore
website/public/algorithm/bubble-sort/: bubble-sort.html  bubble-sort.js
website/public/algorithm/qt-opengl/: qt-wasm.html  qt-wasm.js
website/src/: App.vue  main.js
website/src/api/: api.js  index.js
website/src/assets/css/: base.css
website/src/assets/js/: codemirror.js
website/src/components/: codeEdit.vue  indexFooter.vue  navBar.vue  pageHeader.vue
website/src/router/: index.js
website/src/views/: bootstrap.vue  index.vue
website/src/views/algorithm/: algorithmIndex.vue
website/src/views/ide/: onlineIde.vue
(+1 files in other folders)
